// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement em 1`] = `
Object {
  "fontSize": "0.5625em",
  "lineHeight": "1.5000",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement em 2`] = `
Object {
  "fontSize": "0.6875em",
  "lineHeight": "1.5000",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement em 3`] = `
Object {
  "fontSize": "0.75em",
  "lineHeight": "1.5000",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement em 4`] = `
Object {
  "fontSize": "0.875em",
  "lineHeight": "1.5000",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement em 5`] = `
Object {
  "fontSize": "1em",
  "lineHeight": "1.5000",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement em 6`] = `
Object {
  "fontSize": "1.375em",
  "lineHeight": "1.2495",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement em 7`] = `
Object {
  "fontSize": "1.6875em",
  "lineHeight": "1.2495",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement em 8`] = `
Object {
  "fontSize": "2.125em",
  "lineHeight": "1.2495",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement px 1`] = `
Object {
  "fontSize": "9px",
  "lineHeight": "12px",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement px 2`] = `
Object {
  "fontSize": "11px",
  "lineHeight": "16px",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement px 3`] = `
Object {
  "fontSize": "12px",
  "lineHeight": "16px",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement px 4`] = `
Object {
  "fontSize": "14px",
  "lineHeight": "20px",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement px 5`] = `
Object {
  "fontSize": "16px",
  "lineHeight": "24px",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement px 6`] = `
Object {
  "fontSize": "22px",
  "lineHeight": "24px",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement px 7`] = `
Object {
  "fontSize": "27px",
  "lineHeight": "32px",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement px 8`] = `
Object {
  "fontSize": "34px",
  "lineHeight": "40px",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement rem 1`] = `
Object {
  "fontSize": "0.6429rem",
  "lineHeight": "0.8571rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement rem 2`] = `
Object {
  "fontSize": "0.7857rem",
  "lineHeight": "1.1429rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement rem 3`] = `
Object {
  "fontSize": "0.8571rem",
  "lineHeight": "1.1429rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement rem 4`] = `
Object {
  "fontSize": "1.0000rem",
  "lineHeight": "1.4286rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement rem 5`] = `
Object {
  "fontSize": "1.1429rem",
  "lineHeight": "1.7143rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement rem 6`] = `
Object {
  "fontSize": "1.5714rem",
  "lineHeight": "1.7143rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement rem 7`] = `
Object {
  "fontSize": "1.9286rem",
  "lineHeight": "2.2857rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale and each measurement rem 8`] = `
Object {
  "fontSize": "2.4286rem",
  "lineHeight": "2.8571rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale l 1`] = `
Object {
  "fontSize": "1.5714rem",
  "lineHeight": "1.7143rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale m 1`] = `
Object {
  "fontSize": "1.1429rem",
  "lineHeight": "1.7143rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale s 1`] = `
Object {
  "fontSize": "1.0000rem",
  "lineHeight": "1.4286rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale xl 1`] = `
Object {
  "fontSize": "1.9286rem",
  "lineHeight": "2.2857rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale xs 1`] = `
Object {
  "fontSize": "0.8571rem",
  "lineHeight": "1.1429rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale xxl 1`] = `
Object {
  "fontSize": "2.4286rem",
  "lineHeight": "2.8571rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale xxs 1`] = `
Object {
  "fontSize": "0.7857rem",
  "lineHeight": "1.1429rem",
}
`;

exports[`useEuiFontSize mixin returns a static object with properties related to font-size for each scale xxxs 1`] = `
Object {
  "fontSize": "0.6429rem",
  "lineHeight": "0.8571rem",
}
`;
